--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card border-curve">
-            <img class="avatar border-curve" src="images/alfred.jpeg">
+            <img class="avatar border-curve" src="alfred.jpeg">
             <div >
                 <h3>Alfred Favour</h3>
                 <p>Frontend Developer</p>
